sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort2.scala.error
AlgCocktailSort2:9: error: ')' expected but ',' found.
		if(i+1,i)
                      ^AlgCocktailSort2:12: error: illegal start of simple expression
		}
                ^AlgCocktailSort2:14: error: ')' expected but ',' found.
		if(i+1,i)
                      ^AlgCocktailSort2:17: error: illegal start of simple expression
		}
                ^